// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExecutionActions /> tests snapshot tests "Aborted" status: Menu 1`] = `
<ul
  class="bp3-menu"
>
  <a
    class="bp3-menu-item"
    href="/account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/pipeline-studio/"
  >
    editPipeline
  </a>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-popover-dismiss"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.rerunPipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.pausePipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.abortPipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.resumePipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.downloadLogs
      </div>
    </a>
  </li>
</ul>
`;

exports[`<ExecutionActions /> tests snapshot tests "Aborted" status: container 1`] = `
<div>
  <div
    class="main"
  >
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
          tabindex="0"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-repeat StyledProps--main"
            icon="repeat"
          >
            <svg
              data-icon="repeat"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                repeat
              </desc>
              <path
                d="M10 5c0 .55.45 1 1 1h4c.55 0 1-.45 1-1V1c0-.55-.45-1-1-1s-1 .45-1 1v1.74A7.95 7.95 0 008 0C3.58 0 0 3.58 0 8c0 4.06 3.02 7.4 6.94 7.92.02 0 .04.01.06.01.33.04.66.07 1 .07 4.42 0 8-3.58 8-8 0-.55-.45-1-1-1s-1 .45-1 1c0 3.31-2.69 6-6 6-.71 0-1.37-.15-2-.38v.01C3.67 12.81 2 10.61 2 8c0-3.31 2.69-6 6-6 1.77 0 3.36.78 4.46 2H11c-.55 0-1 .45-1 1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main more Button--with-current-color Button--iconOnly Button--without-shadow"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-more StyledProps--main"
            icon="more"
          >
            <svg
              data-icon="more"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                more
              </desc>
              <path
                d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;

exports[`<ExecutionActions /> tests snapshot tests "Expired" status: Menu 1`] = `
<ul
  class="bp3-menu"
>
  <a
    class="bp3-menu-item"
    href="/account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/pipeline-studio/"
  >
    editPipeline
  </a>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-popover-dismiss"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.rerunPipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.pausePipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.abortPipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.resumePipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.downloadLogs
      </div>
    </a>
  </li>
</ul>
`;

exports[`<ExecutionActions /> tests snapshot tests "Expired" status: container 1`] = `
<div>
  <div
    class="main"
  >
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
          tabindex="0"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-repeat StyledProps--main"
            icon="repeat"
          >
            <svg
              data-icon="repeat"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                repeat
              </desc>
              <path
                d="M10 5c0 .55.45 1 1 1h4c.55 0 1-.45 1-1V1c0-.55-.45-1-1-1s-1 .45-1 1v1.74A7.95 7.95 0 008 0C3.58 0 0 3.58 0 8c0 4.06 3.02 7.4 6.94 7.92.02 0 .04.01.06.01.33.04.66.07 1 .07 4.42 0 8-3.58 8-8 0-.55-.45-1-1-1s-1 .45-1 1c0 3.31-2.69 6-6 6-.71 0-1.37-.15-2-.38v.01C3.67 12.81 2 10.61 2 8c0-3.31 2.69-6 6-6 1.77 0 3.36.78 4.46 2H11c-.55 0-1 .45-1 1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main more Button--with-current-color Button--iconOnly Button--without-shadow"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-more StyledProps--main"
            icon="more"
          >
            <svg
              data-icon="more"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                more
              </desc>
              <path
                d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;

exports[`<ExecutionActions /> tests snapshot tests "Failed" status: Menu 1`] = `
<ul
  class="bp3-menu"
>
  <a
    class="bp3-menu-item"
    href="/account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/pipeline-studio/"
  >
    editPipeline
  </a>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-popover-dismiss"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.rerunPipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.pausePipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.abortPipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.resumePipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.downloadLogs
      </div>
    </a>
  </li>
</ul>
`;

exports[`<ExecutionActions /> tests snapshot tests "Failed" status: container 1`] = `
<div>
  <div
    class="main"
  >
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
          tabindex="0"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-repeat StyledProps--main"
            icon="repeat"
          >
            <svg
              data-icon="repeat"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                repeat
              </desc>
              <path
                d="M10 5c0 .55.45 1 1 1h4c.55 0 1-.45 1-1V1c0-.55-.45-1-1-1s-1 .45-1 1v1.74A7.95 7.95 0 008 0C3.58 0 0 3.58 0 8c0 4.06 3.02 7.4 6.94 7.92.02 0 .04.01.06.01.33.04.66.07 1 .07 4.42 0 8-3.58 8-8 0-.55-.45-1-1-1s-1 .45-1 1c0 3.31-2.69 6-6 6-.71 0-1.37-.15-2-.38v.01C3.67 12.81 2 10.61 2 8c0-3.31 2.69-6 6-6 1.77 0 3.36.78 4.46 2H11c-.55 0-1 .45-1 1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main more Button--with-current-color Button--iconOnly Button--without-shadow"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-more StyledProps--main"
            icon="more"
          >
            <svg
              data-icon="more"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                more
              </desc>
              <path
                d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;

exports[`<ExecutionActions /> tests snapshot tests "NotStarted" status: Menu 1`] = `
<ul
  class="bp3-menu"
>
  <a
    class="bp3-menu-item"
    href="/account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/pipeline-studio/"
  >
    editPipeline
  </a>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.rerunPipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-popover-dismiss"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.pausePipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-popover-dismiss"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.abortPipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.resumePipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.downloadLogs
      </div>
    </a>
  </li>
</ul>
`;

exports[`<ExecutionActions /> tests snapshot tests "NotStarted" status: container 1`] = `
<div>
  <div
    class="main"
  >
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
          tabindex="0"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-pause StyledProps--main"
            icon="pause"
          >
            <svg
              data-icon="pause"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                pause
              </desc>
              <path
                d="M6 3H4c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1zm6 0h-2c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
          tabindex="0"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-stop StyledProps--main"
            icon="stop"
          >
            <svg
              data-icon="stop"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                stop
              </desc>
              <path
                d="M12 3H4c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h8c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main more Button--with-current-color Button--iconOnly Button--without-shadow"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-more StyledProps--main"
            icon="more"
          >
            <svg
              data-icon="more"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                more
              </desc>
              <path
                d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;

exports[`<ExecutionActions /> tests snapshot tests "Paused" status: Menu 1`] = `
<ul
  class="bp3-menu"
>
  <a
    class="bp3-menu-item"
    href="/account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/pipeline-studio/"
  >
    editPipeline
  </a>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.rerunPipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.pausePipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-popover-dismiss"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.abortPipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-popover-dismiss"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.resumePipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.downloadLogs
      </div>
    </a>
  </li>
</ul>
`;

exports[`<ExecutionActions /> tests snapshot tests "Paused" status: container 1`] = `
<div>
  <div
    class="main"
  >
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
          tabindex="0"
          type="button"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="play"
          >
            <svg
              fill="none"
              height="16"
              viewBox="0 0 44 43"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M43.553 21c0 11.786-10.018 21.53-21.553 21.53-11.536 0-20.947-8.86-20.947-20.646C1.053 10.098 10.965 1 22.5 1c11.536 0 21.053 8.214 21.053 20z"
                fill="#fff"
              />
              <path
                d="M17.607 12.066v17.63L31 21.099c-2.143-1.255-13.393-9.033-13.393-9.033z"
                fill="currentColor"
              />
              <path
                d="M17.607 29.696v-17.63m0 17.63L31 21.099c-2.143-1.255-13.393-9.033-13.393-9.033m0 17.63L16 31.029m1.607-18.963L16 11.03"
                stroke="#000"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
              <path
                d="M24.578 1.115C5.133 1.115-.284 15.295 1.243 24.11c1.18 6.806 4.573 12.204 10.558 15.32 11.906 6.2 24.283.825 29.506-10.984 5.684-12.855-4.254-23.415-10.5-25.85C25.67.592 18.353.436 13.017 2.56"
                stroke="#000"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
          tabindex="0"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-stop StyledProps--main"
            icon="stop"
          >
            <svg
              data-icon="stop"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                stop
              </desc>
              <path
                d="M12 3H4c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h8c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main more Button--with-current-color Button--iconOnly Button--without-shadow"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-more StyledProps--main"
            icon="more"
          >
            <svg
              data-icon="more"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                more
              </desc>
              <path
                d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;

exports[`<ExecutionActions /> tests snapshot tests "Queued" status: Menu 1`] = `
<ul
  class="bp3-menu"
>
  <a
    class="bp3-menu-item"
    href="/account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/pipeline-studio/"
  >
    editPipeline
  </a>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.rerunPipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-popover-dismiss"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.pausePipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-popover-dismiss"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.abortPipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.resumePipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.downloadLogs
      </div>
    </a>
  </li>
</ul>
`;

exports[`<ExecutionActions /> tests snapshot tests "Queued" status: container 1`] = `
<div>
  <div
    class="main"
  >
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
          tabindex="0"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-pause StyledProps--main"
            icon="pause"
          >
            <svg
              data-icon="pause"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                pause
              </desc>
              <path
                d="M6 3H4c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1zm6 0h-2c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
          tabindex="0"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-stop StyledProps--main"
            icon="stop"
          >
            <svg
              data-icon="stop"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                stop
              </desc>
              <path
                d="M12 3H4c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h8c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main more Button--with-current-color Button--iconOnly Button--without-shadow"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-more StyledProps--main"
            icon="more"
          >
            <svg
              data-icon="more"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                more
              </desc>
              <path
                d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;

exports[`<ExecutionActions /> tests snapshot tests "ResourceWaiting" status: Menu 1`] = `
<ul
  class="bp3-menu"
>
  <a
    class="bp3-menu-item"
    href="/account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/pipeline-studio/"
  >
    editPipeline
  </a>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.rerunPipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-popover-dismiss"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.pausePipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-popover-dismiss"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.abortPipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.resumePipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.downloadLogs
      </div>
    </a>
  </li>
</ul>
`;

exports[`<ExecutionActions /> tests snapshot tests "ResourceWaiting" status: container 1`] = `
<div>
  <div
    class="main"
  >
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
          tabindex="0"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-pause StyledProps--main"
            icon="pause"
          >
            <svg
              data-icon="pause"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                pause
              </desc>
              <path
                d="M6 3H4c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1zm6 0h-2c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
          tabindex="0"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-stop StyledProps--main"
            icon="stop"
          >
            <svg
              data-icon="stop"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                stop
              </desc>
              <path
                d="M12 3H4c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h8c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main more Button--with-current-color Button--iconOnly Button--without-shadow"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-more StyledProps--main"
            icon="more"
          >
            <svg
              data-icon="more"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                more
              </desc>
              <path
                d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;

exports[`<ExecutionActions /> tests snapshot tests "Running" status: Menu 1`] = `
<ul
  class="bp3-menu"
>
  <a
    class="bp3-menu-item"
    href="/account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/pipeline-studio/"
  >
    editPipeline
  </a>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.rerunPipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-popover-dismiss"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.pausePipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-popover-dismiss"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.abortPipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.resumePipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.downloadLogs
      </div>
    </a>
  </li>
</ul>
`;

exports[`<ExecutionActions /> tests snapshot tests "Running" status: container 1`] = `
<div>
  <div
    class="main"
  >
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
          tabindex="0"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-pause StyledProps--main"
            icon="pause"
          >
            <svg
              data-icon="pause"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                pause
              </desc>
              <path
                d="M6 3H4c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1zm6 0h-2c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
          tabindex="0"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-stop StyledProps--main"
            icon="stop"
          >
            <svg
              data-icon="stop"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                stop
              </desc>
              <path
                d="M12 3H4c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h8c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main more Button--with-current-color Button--iconOnly Button--without-shadow"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-more StyledProps--main"
            icon="more"
          >
            <svg
              data-icon="more"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                more
              </desc>
              <path
                d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;

exports[`<ExecutionActions /> tests snapshot tests "Success" status: Menu 1`] = `
<ul
  class="bp3-menu"
>
  <a
    class="bp3-menu-item"
    href="/account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/pipeline-studio/"
  >
    editPipeline
  </a>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-popover-dismiss"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.rerunPipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.pausePipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.abortPipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.resumePipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.downloadLogs
      </div>
    </a>
  </li>
</ul>
`;

exports[`<ExecutionActions /> tests snapshot tests "Success" status: container 1`] = `
<div>
  <div
    class="main"
  >
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
          tabindex="0"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-repeat StyledProps--main"
            icon="repeat"
          >
            <svg
              data-icon="repeat"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                repeat
              </desc>
              <path
                d="M10 5c0 .55.45 1 1 1h4c.55 0 1-.45 1-1V1c0-.55-.45-1-1-1s-1 .45-1 1v1.74A7.95 7.95 0 008 0C3.58 0 0 3.58 0 8c0 4.06 3.02 7.4 6.94 7.92.02 0 .04.01.06.01.33.04.66.07 1 .07 4.42 0 8-3.58 8-8 0-.55-.45-1-1-1s-1 .45-1 1c0 3.31-2.69 6-6 6-.71 0-1.37-.15-2-.38v.01C3.67 12.81 2 10.61 2 8c0-3.31 2.69-6 6-6 1.77 0 3.36.78 4.46 2H11c-.55 0-1 .45-1 1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main more Button--with-current-color Button--iconOnly Button--without-shadow"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-more StyledProps--main"
            icon="more"
          >
            <svg
              data-icon="more"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                more
              </desc>
              <path
                d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;

exports[`<ExecutionActions /> tests snapshot tests "Suspended" status: Menu 1`] = `
<ul
  class="bp3-menu"
>
  <a
    class="bp3-menu-item"
    href="/account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/pipeline-studio/"
  >
    editPipeline
  </a>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-popover-dismiss"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.rerunPipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.pausePipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.abortPipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.resumePipeline
      </div>
    </a>
  </li>
  <li
    class=""
  >
    <a
      class="bp3-menu-item bp3-disabled"
      tabindex="-1"
    >
      <div
        class="bp3-text-overflow-ellipsis bp3-fill"
      >
        pipeline.execution.actions.downloadLogs
      </div>
    </a>
  </li>
</ul>
`;

exports[`<ExecutionActions /> tests snapshot tests "Suspended" status: container 1`] = `
<div>
  <div
    class="main"
  >
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
          tabindex="0"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-repeat StyledProps--main"
            icon="repeat"
          >
            <svg
              data-icon="repeat"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                repeat
              </desc>
              <path
                d="M10 5c0 .55.45 1 1 1h4c.55 0 1-.45 1-1V1c0-.55-.45-1-1-1s-1 .45-1 1v1.74A7.95 7.95 0 008 0C3.58 0 0 3.58 0 8c0 4.06 3.02 7.4 6.94 7.92.02 0 .04.01.06.01.33.04.66.07 1 .07 4.42 0 8-3.58 8-8 0-.55-.45-1-1-1s-1 .45-1 1c0 3.31-2.69 6-6 6-.71 0-1.37-.15-2-.38v.01C3.67 12.81 2 10.61 2 8c0-3.31 2.69-6 6-6 1.77 0 3.36.78 4.46 2H11c-.55 0-1 .45-1 1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main more Button--with-current-color Button--iconOnly Button--without-shadow"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-more StyledProps--main"
            icon="more"
          >
            <svg
              data-icon="more"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                more
              </desc>
              <path
                d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;
